git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@927 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/_entities_contacts_form.html.haml
+++ b/app/views/relations/_entities_contacts_form.html.haml
@@ -1,5 +1,5 @@
 =#render :partial=>"general_description_form"
-=render :partial=>"coordinates_form"
+=render :partial=>"coordinates_form", :locals => {:company => @current_company}
  
 
 
