--- a/app/views/company/roles_update.html.haml
+++ b/app/views/company/roles_update.html.haml
@@ -8,7 +8,7 @@
       =formalize do |f|
         - f.title tc((right[0].to_s+"_rights").to_sym)
         - for right_name in right[1]
-          - f.field content_tag(:label, t('rights.'+right_name.to_s), :for=>"right_#{right_name}"), check_box_tag("right[#{right_name}]", "#{right_name}", session[:role].rights.to_s.include?(right_name.to_s)||session[:role].rights=="administrate", :id=>"right_#{right_name}")
+          - f.field content_tag(:label, t('rights.'+right_name.to_s), :for=>"right_#{right_name}"), check_box_tag("right[#{right_name}]", "#{right_name}", session[:role].rights.to_s.include?(right_name.to_s), :id=>"right_#{right_name}")
   .actions
     =link_to tg(:previous), :action=>:index
     =submit_tag(tc('validate'), :action=>:roles_update)
