--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -201,6 +201,7 @@ input[type="submit"]:hover, input[type="submit"]:active, input[type="submit"]:fo
 .toolbar ul > li > a.restore   {background: url(../images/buttons/left.png) no-repeat center left;}
 .toolbar ul > li > a.import    {background: url(../images/buttons/left.png) no-repeat center left;}
 .toolbar ul > li > a.configure {background: url(../images/buttons/configure.png) no-repeat center left;}
+.toolbar ul > li > a.extract   {background: url(../images/buttons/complete.png) no-repeat center left;}
 
 
 
