git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@933 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/_entities_form.html.haml
+++ b/app/views/relations/_entities_form.html.haml
@@ -1,3 +1,4 @@
+=dyli_tag :contact, :area, :dyli=>:area_search, :resize=>true
 =formalize do |f|
   -f.error :entity
   -f.error :datum
@@ -57,7 +58,6 @@
   }
   displayFields();
   
-
 =observe_field "entity_client", :function=>"displayFields();", :frequency => 0.25
 =observe_field "entity_supplier", :function=>"displayFields();", :frequency => 0.25
 =render :partial=>"coordinates_form", :locals => {:company => @current_company}
