--- a/app/views/relations/_coordinates_form.html.haml
+++ b/app/views/relations/_coordinates_form.html.haml
@@ -1,3 +1,5 @@
+
+
 =formalize do |f|
   -f.title :address
   -f.field :contact, :default
@@ -6,9 +8,6 @@
   -f.field :contact, :line_4_number
   -f.field :contact, :line_4_street
   -f.field :contact, :line_5
-  -#f.div  
- 
-  
   -#f.field :contact, :area_id, :choices=>company.areas.find(:all,:order=>"name ASC").collect {|c| [c.postcode+'-'+c.city.name, c.id]}
   -f.field :contact, :line_6_code
   -f.field :contact, :line_6_city
@@ -20,9 +19,9 @@
   -f.field :contact, :email   
   -f.field :contact, :website
 
-=dyli_tag :contact, :area, :dyli=>:area_search, :resize=>true
+=observe_field "dyli_tf", :frequency => 0.25, :function =>"$('contact_line_6_code').value= value.split(',')[0]; $('contact_line_6_city').value= value.split(',')[1];"
 
-=observe_field "contact_area_id", :frequency => 0.25, :function =>remote_function(:update=>'area', :url => {:action => 'areas_find'}, :with => "'area=' + escape(value)")
+=#observe_field "contact_area_id", :frequency => 0.25, :function =>remote_function(:update=>'area', :url => {:action => 'areas_find'}, :with => "'area=' + escape(value)")
 
 %br
 #area=render :partial=>'areas_find'
