git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@934 67a09383-3dfa-4221-8551-890bac9c277c

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -249,6 +249,8 @@ input[type="text"].invalid:focus, input[type="password"].invalid:focus, textarea
 .window { padding:4px; background: #EEE; border: 1px solid #AAA; margin: 8px;}
 .window .dyta { background: white; }
 
+.center { text-align: center; }
+
 /* Droits utilisateurs */
 .right-category { text-align: center; padding: 15px 0 5px 0; font-weight: bold;}
 .right {  margin-left:50px;}
