--- a/app/views/management/_sale_order_lines_form.html.haml
+++ b/app/views/management/_sale_order_lines_form.html.haml
@@ -8,7 +8,8 @@
 
 #subscription_number{:style=>'display:none'}
   =formalize do |f|
-    - f.field :subscription, :numbers
+    - f.field :subscription, :first_number
+    - f.field :subscription, :last_number
     - f.field :subscription, :contact_id, :choices=>@current_company.contacts.find_all_by_active(true).collect{|x| [x.entity.full_name+" "+x.address, x.id]}
 
 #subscription_date{:style=>'display:none'}
