git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@936 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/company/_users_form.html.haml
+++ b/app/views/company/_users_form.html.haml
@@ -15,7 +15,8 @@
   -#f.field :user, :reduction_percent
   -#f.field :user, :free_price
   -#f.field :user, :credits
-%div#rights=render :partial=>"roles_form"
+
+#rights=render :partial=>"rights_form"
 
 :javascript
   function display_rights(){
@@ -29,3 +30,4 @@
   display_rights();
 
 =observe_field("user_admin", :frequency=>0.25, :function=>"display_rights();" )
+=observe_field("user_role_id", :url=>{:action=>:users_create}, :update=>:rights, :frequency => 0.25 , :with=>"user_role_id")
