--- a/app/views/help/_search.html.haml
+++ b/app/views/help/_search.html.haml
@@ -11,7 +11,7 @@
           =tc(:error_no_file, :value=>@article)
           =@article.to_s
         %ul
-          %li=link_to_remote(tc("home"), :url=>{:controller=>:help, :action=>:search, :article=>"guide-index"}, :update=>:help, :complete=>"resize2();", :loading=>"onLoading();", :loaded=>"onLoaded();")
+          %li=link_to_remote(tc("home"), :url=>{:controller=>:help, :action=>:search, :article=>"company-index"}, :update=>:help, :complete=>"resize2();", :loading=>"onLoading();", :loaded=>"onLoaded();")
       - else
         =doc
       .text-end &nbsp;
