--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -55,9 +55,11 @@ input[type="text"], input[type="password"], textarea, select { border:1px solid 
 #side .menu li a { display:block; padding: 2px 4px 4px 16px;}
 /*#side .menu li a { font-size: 11px; }*/
 /*#side .index { display:block; padding: 2px; font-size: 11px; text-align:center; background: #FFF; border: 2px solid #95b0e4; margin: 2px;}*/
-#side .indicator { border-color: #8ad4c0}
+#side .indicator { border-color: #8ad4c0 }
 #side .indicator li { background: url(../images/template/round_green.png) left no-repeat; }
 #side .indicator li:hover { background: #DBF6E4 url(../images/template/round_hover.png) no-repeat center left; }
+#side .indicator li a:link, #side .indicator li a:visited { color:#080;}
+
 
 #yield { padding: 8px; overflow: auto; background: url(../images/template/columns.png) repeat-x top; border: 1px solid #95b0e4; }
 #yield > h1 { margin: 0px 0px 8px; font-size:20px; color: #047;}
@@ -73,11 +75,12 @@ input[type="text"], input[type="password"], textarea, select { border:1px solid 
 .errorExplanation { background: #ECA; color: #543; margin: 8px; }
 
 #top {height: 24px;}
-/*#top .menu a, #top .menu strong, #top .menu span { margin-left: 6px; }*/
 #top .menu * { padding: 4px 4px 5px;}
 #top .menu strong { background: #E4EBF8;}
-#modules { float:left; height:24px; margin-top:4px; }
-#user { float:right; height:24px; margin:4px 10px; text-align:right;}
+#top .menu a.logout {padding: 2px 2px 2px 20px; height:16px; background: url(../images/buttons/logout.png) no-repeat center left;}
+#top #user span { padding-right: 10px; }
+#top #user { float:right; height:24px; margin:4px 0; text-align:right;}
+#top #modules { float:left; height:24px; margin-top:4px; }
 
 .help-link { float:right; padding: 8px 4px;}
 .help-link a:link { padding: 4px; font-size: 13px; color: #750; background: #e9e9a8; }
@@ -202,6 +205,7 @@ input[type="submit"]:hover, input[type="submit"]:active, input[type="submit"]:fo
 .toolbar ul > li > a.import    {background: url(../images/buttons/left.png) no-repeat center left;}
 .toolbar ul > li > a.configure {background: url(../images/buttons/configure.png) no-repeat center left;}
 .toolbar ul > li > a.extract   {background: url(../images/buttons/complete.png) no-repeat center left;}
+
 
 
 .search { background: #CEA !important; color: #580;  -moz-border-radius: 8px; padding:4px 6px; margin: 0 0 8px;}
