--- a/app/views/company/_rights_form.html.haml
+++ b/app/views/company/_rights_form.html.haml
@@ -1,7 +1,9 @@
-- for group, rights in User.useful_rights||{}
-  =formalize do |f|
-    - f.title tc("#{group}_rights")
-    - for right in rights
-      - f.field content_tag(:label, t("rights.#{right}"), :for=>"rights_#{right}"), check_box_tag("rights[#{right}]", "1", @rights.include?(right), :id=>"rights_#{right}")
+-# for controller, rights in (User.useful_rights||{}).sort{|a,b| a.to_s<=>b.to_s}
+=formalize do |f|
+  - for controller in menus.collect{|m| m[:name]}
+    - rights = User.useful_rights[controller]
+    - f.title tc("#{controller}_rights")
+    - for right in rights.sort{|a,b| a.to_s<=>b.to_s}
+      - f.field content_tag(:label, t("rights.#{right}"), :for=>"rights_#{right}"), check_box_tag("rights[#{right}]", "1", @rights.include?(right.to_sym), :id=>"rights_#{right}")
 
 
