--- a/app/views/management/subscriptions.html.haml
+++ b/app/views/management/subscriptions.html.haml
@@ -2,7 +2,7 @@
   - form_tag do
     %table.formalize
       %td.label=tc('subscription_nature')
-      %td.input=select(:subscription_nature, :name, @current_company.subscription_natures.collect{|x| [x.name, x.id]})
+      %td.input=select(:subscription_nature, :id, @current_company.subscription_natures.collect{|x| [x.name, x.id]})
     
 
     #subscription_options
@@ -14,5 +14,5 @@
 = dyta :subscriptions
 
 
-=observe_field("subscription_nature_name",  :url=>{:action => :subscription_options_display}, :frequency => 0.25, :with=>"subscription_nature_id")
+=observe_field("subscription_nature_id",  :url=>{:action => :subscription_options_display}, :frequency => 0.25, :with=>"subscription_nature_id")
 
