--- a/app/views/company/listings.html.haml
+++ b/app/views/company/listings.html.haml
@@ -1,6 +1,3 @@
-%table
-  %tr
-    %td#criteria
-      %table.dyta
-    %td#columns
-      %table.dyta
+=toolbar do |t|
+  -t.link :listings_create
+=dyta :listings
