git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@946 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/help/_search.html.haml
+++ b/app/views/help/_search.html.haml
@@ -5,7 +5,7 @@
     %h1.title=tc :title
   -cache(:action=>"help", :id=>@article) do
     .content{:flex=>1, :style=>'overflow:auto;'}
-      - doc=wikize(@article)
+      - doc=article(@article)
       - if doc.blank?
         .help-error
           =tc(:error_no_file, :value=>@article)
