--- a/app/views/company/help.html.haml
+++ b/app/views/company/help.html.haml
@@ -5,21 +5,22 @@
         %td.label=tc(:search)
         %td.field=text_field_tag :key, @key
         %td.submit=submit_tag tg(:search_go)
--if @results
-  .results
-    %h2=tc(:results, :count=>@results.size)
-    -if @results.size>0
-      %ul
-        -for r in @results[0..@per_page-1]
-          %li
-            =link_to(textilize_without_paragraph(r[:title]), {:action=>:help, :article=>r[:name]})+' '
-            .pertinence=tc(:pertinence, :value=>r[:pertinence].to_s)
-      -if @results.size>@per_page
-        %h2=link_to_function(tc(:other_results), "var list=$('other_results'); if (list.style.display=='none') {list.show();} else {list.hide();}")
-        %ul#other_results{:style=>'display:none'}
-          -for r in @results[@per_page..-1]
-            %li
-              =link_to(textilize_without_paragraph(r[:title]), {:article=>r[:name]})+' '
-              .pertinence=tc(:pertinence, :value=>r[:pertinence].to_s)
-
-      
+%table.flex
+  %tr
+    -if @results
+      %td.results{:valign=>:top}
+        %h2=tc(:results, :count=>@results.size)
+        -if @results.size>0
+          %ul
+            -for r in @results[0..@per_page-1]
+              %li
+                =link_to_remote(wikize(r[:title]), :url=>{:action=>:help, :article=>r[:name]}, :update=>:helpage)+' '
+                -#.pertinence=tc(:pertinence, :value=>r[:pertinence].to_s)
+          -if @results.size>@per_page
+            %h2=link_to_function(tc(:other_results), "var list=$('other_results'); if (list.style.display=='none') {list.show();} else {list.hide();}")
+            %ul#other_results{:style=>'display:none'}
+              -for r in @results[@per_page..-1]
+                %li
+                  =link_to(wikize(r[:title]), {:article=>r[:name]})+' '
+                  .pertinence=tc(:pertinence, :value=>r[:pertinence].to_s)
+    %td#helpage.content{:valign=>:top}
