git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@947 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/_entities_form.html.haml
+++ b/app/views/relations/_entities_form.html.haml
@@ -1,4 +1,4 @@
-=dyli_tag :contact, :area, :dyli=>:area_search, :resize=>true
+=dyli_tag :contact, :area, :dyli=>:area_search, :resize=>true, :allow_free_text => true
 =formalize do |f|
   -f.error :entity
   -f.error :datum
