git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@950 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/sales_products.html.haml
+++ b/app/views/management/sales_products.html.haml
@@ -3,6 +3,8 @@
 = toolbar do
   - link :sales_print, :id=>@sale_order.id
 
+=render :partial=>"quick_line"
+
 %h2=tc :lines
 =toolbar do
   -link(:sale_order_lines_create) if @sale_order.state == 'P'
