--- a/public/stylesheets/dyta.css
+++ b/public/stylesheets/dyta.css
@@ -2,6 +2,12 @@ h3.dyta {padding:4px;color: #139; font-size: 16px; }
 table.dyta { border-collapse: collapse; width: 100%; border-bottom: 1px solid #BACFE6;}
 table.dyta th { background: #e9f3fe url(../images/template/table_head.png) repeat-x bottom; padding:2px 3px; color: #336; font-weight: bold; font-size:13px; text-align:left; }
 table.dyta th.sorted { background: #C9D3E2 url(../images/template/table_head_sorted.png) repeat-x bottom; padding:2px 3px; color: #336; font-weight: bold; font-size:13px; text-align:left;}
+table.dyta th a.sort { display:block; margin-right:10px; text-decoration:none; padding: 1px; color: #336; }
+table.dyta th a.sort:active { padding:2px 0 0 2px;}
+table.dyta th a.sort.unsorted { background: url(../images/buttons/center.png) right center no-repeat; }
+table.dyta th a.sort.desc { background: url(../images/buttons/down3.png) right center no-repeat; }
+table.dyta th a.sort.asc { background: url(../images/buttons/up3.png) right center no-repeat; }
+table.dyta th a.sort { display:block; width: 100%;}
 table.dyta tr.odd  td {background: #E1E6FF;}
 table.dyta tr.even td {background: #F0F2FF;}
 table.dyta tr.root td {font-weight: bold; }
@@ -34,14 +40,7 @@ table.dyta tr      td.code a { font-family: monospace; }
 table.dyta tr      td.rights * { font-size: 11px; }
 table.dyta tr      td.rights.more * { color: #080; }
 table.dyta tr      td.rights.less * { color: #F00; }
-/*table.dyta th .sort { widths: 100%; }
-table.dyta th .sort div { widths: 100%; }*/
-table.dyta th a.sort { display:block; width: 100%; text-decoration:none; padding: 1px; color: #336; }
-table.dyta th a.sort:active { padding:2px 0 0 2px;}
-table.dyta th a.sort.unsorted { background: url(../images/buttons/center.png) right center no-repeat; }
-table.dyta th a.sort.desc { background: url(../images/buttons/down3.png) right center no-repeat; }
-table.dyta th a.sort.asc { background: url(../images/buttons/up3.png) right center no-repeat; }
-table.dyta th a.sort { display:block; width: 100%;}
+
 table.dyta tr.details td { padding: 8px; text-align:center;}
 table.dyta tr.details td.comment { padding: 10px; font-size:15px; }
 
