--- a/app/views/management/sales_products.html.haml
+++ b/app/views/management/sales_products.html.haml
@@ -3,11 +3,11 @@
 = toolbar do
   - link :sales_print, :id=>@sale_order.id
 
-=render :partial=>"quick_line"
 
 %h2=tc :lines
 =toolbar do
   -link(:sale_order_lines_create) if @sale_order.state == 'P'
+=render :partial=>"quick_line" if @sale_order.state == 'P'
 =dyta :sale_order_lines
 
 .total
