--- a/app/views/relations/_cities_form.html.haml
+++ b/app/views/relations/_cities_form.html.haml
@@ -1,4 +1,4 @@
 =formalize do |f|
   - f.error :city
+  - f.field :city, :district_id, :choices => @current_company.districts.find(:all).collect {|d| [d.name, d.id]}, :options=>{:include_blank=>true}, :new => {:action => :districts_create}
   - f.field :city, :name
-  - f.field :city, :district_id, :choices => @current_company.districts.find(:all).collect {|d| [d.name, d.id]}, :new => {:action => :districts_create}
