--- a/app/views/relations/_coordinates_form.html.haml
+++ b/app/views/relations/_coordinates_form.html.haml
@@ -6,9 +6,10 @@
   -f.field :contact, :line_4_number
   -f.field :contact, :line_4_street
   -f.field :contact, :line_5
- 
-  -f.field :contact, :line_6_code
-  -f.field :contact, :line_6_city
+  -# f.field t("activerecord.attributes.contact.area_id"), dyli_tag(:contact, :area, :dyli=>:area_search, :resize=>true, :allow_free_text => true)
+  -f.field t("activerecord.attributes.contact.area_id"), dyse_tag(:contact, :line6)
+  -# f.field :contact, :line_6_code
+  -# f.field :contact, :line_6_city
   -f.field :contact, :country, :choices=>countries, :options=>{:include_blank=>true}
   -f.title :canals
   -f.field :contact, :phone
@@ -17,7 +18,8 @@
   -f.field :contact, :email   
   -f.field :contact, :website
 
-=observe_field "dyli_tf", :frequency=> 0.25, :function =>remote_function(:url => {:action => :areas_find}, :with=>"'area='+escape(value)")
+
+=# observe_field "dyli_tf", :frequency=> 0.25, :function =>remote_function(:url => {:action => :areas_find}, :with=>"'area='+escape(value)")
 
 :javascript
   $('contact_line_6_code').value=" ";
