git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@975 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/products_display.html.haml
+++ b/app/views/management/products_display.html.haml
@@ -26,7 +26,7 @@
 
 - if @product_stocks.size > 0
   %h2= tc('stocks')
-  .stocks=render :partial=>"stock_indicator"
+  =dyta :uniq_critic_product_stocks
 
 -if @product.to_sale or @product.to_purchase
   %h2=tc :prices
