git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@979 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/_entity_link_natures_form.html.haml
+++ b/app/views/relations/_entity_link_natures_form.html.haml
@@ -1,3 +1,19 @@
 =formalize do |f|
   - f.error :entity_link_nature
   - f.field :entity_link_nature, :name
+  - f.field :entity_link_nature, :symmetric
+  - f.field :entity_link_nature, :name_1_to_2
+=formalize(:id=>"optional_field") do |f|
+  - f.field :entity_link_nature, :name_2_to_1
+
+
+:javascript
+  function symmetric(){
+    if($('entity_link_nature_symmetric').checked)
+      $('optional_field').hide();
+    else
+      $('optional_field').show();
+  }
+  symmetric();
+
+=observe_field("entity_link_nature_symmetric", :frequency=>0.25, :function=>"symmetric();")
