--- a/app/views/company/_users_form.html.haml
+++ b/app/views/company/_users_form.html.haml
@@ -9,6 +9,10 @@
   -f.field :user, :password
   -f.field :user, :password_confirmation
   -f.field :user, :admin
+  -f.field  t("views.company._users_form.employee"), check_box_tag(:create_employee)
+
+#employee=render :partial=>"resources/employees_form", :locals=>{:create_user=>true}
+ 
 =formalize(:id=>:show_rights) do |f|
   -f.title :rights
   -f.field :user, :role_id, :choices=>@current_company.roles.find(:all, :order=>:name).collect{|x| [x.name, x.id]}, :new=>{:action=>:roles_create}
@@ -27,7 +31,16 @@
       $('show_rights').show();
       $('rights').show();}
   }
+  
+  function create_employee(){
+    if($('create_employee').checked){
+      $('employee').show();}
+    else{
+      $('employee').hide();}
+  }
   display_rights();
+  create_employee();
 
+=observe_field("create_employee", :frequency=>0.25, :function=>"create_employee();" )
 =observe_field("user_admin", :frequency=>0.25, :function=>"display_rights();" )
 =observe_field("user_role_id", :url=>{:action=>:users_create}, :update=>:rights, :frequency => 0.25 , :with=>"user_role_id")
