git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@983 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/company/configure.html.haml
+++ b/app/views/company/configure.html.haml
@@ -3,7 +3,7 @@
   =formalize do |f|
     -f.title tc(:general)
     -f.field :company, :name
-    -f.field :company, :code
+    -f.field t("activerecord.attributes.company.code"), content_tag(:strong, @company.code)
     -f.field t("activerecord.attributes.company.entity_id"), link_to(@company.entity.full_name, {:controller=>:relations, :action=>:entities_update, :id=>@company.entity_id})
     -for name, options in @tree
       -f.title tc(name)
