git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@986 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/_entity_link_natures_form.html.haml
+++ b/app/views/relations/_entity_link_natures_form.html.haml
@@ -2,6 +2,7 @@
   - f.error :entity_link_nature
   - f.field :entity_link_nature, :name
   - f.field :entity_link_nature, :symmetric
+  - f.field :entity_link_nature, :propagate_contacts
   - f.field :entity_link_nature, :name_1_to_2
 =formalize(:id=>"optional_field") do |f|
   - f.field :entity_link_nature, :name_2_to_1
