--- a/app/views/management/_payments_form.html.haml
+++ b/app/views/management/_payments_form.html.haml
@@ -10,6 +10,7 @@
   -f.field :payment, :amount
   -f.field :payment, :to_bank_on
   -f.field :payment, :mode_id, :choices=>PaymentMode.find(:all,:conditions=>{:company_id=>@current_company.id}).collect{|x| [x.name, x.id ]}, :new=>{:action=>:payment_modes_create}
+  -f.field :payment, :downpayment
   -f.title :check
   -f.field :payment, :embanker_id, :choices=>@current_company.users.collect{|x| [x.first_name+" "+x.last_name, x.id]}
   -f.field :payment, :paid_on
