--- a/app/views/relations/_entities_form.html.haml
+++ b/app/views/relations/_entities_form.html.haml
@@ -6,6 +6,9 @@
   -f.field :entity, :language_id, :choices=>@current_company.languages.find(:all, :order=>:native_name).collect {|x| [x.native_name, x.id]}
   -f.field :entity, :name
   -f.field :entity, :first_name
+  -f.field  t("activerecord.attributes.mandate.family"), text_field_with_auto_complete(:mandate, :family)
+  -f.field  t("activerecord.attributes.mandate.organization"), text_field_with_auto_complete(:mandate, :organization)
+  -f.field  t("activerecord.attributes.mandate.title"), text_field_with_auto_complete(:mandate, :title)
   -f.field :entity, :client
   -f.field :entity, :supplier
   -f.title :details
@@ -23,9 +26,9 @@
 
 =formalize(:id=>:client_form) do |f|
   -f.title :client
-  -f.field :entity, :client_account_id, :choices=>@client_accounts.collect{|x| [x.label, x.id]}, :new=>{:controller=>:accountancy, :action=>:accounts_create}, :options=>{:include_blank=>"--Créer automatiquement un compte client--"} 
+  -f.field :entity, :client_account_id, :choices=>@client_accounts.collect{|x| [x.label, x.id]}, :new=>{:controller=>:accountancy, :action=>:accounts_create}, :options=>{:include_blank=>tc(:account_client_to_create)} 
   -f.field :entity, :category_id, :choices=>@current_company.entity_categories.find_all_by_deleted(false).collect{|x| [x.name, x.id]}
-  -f.field :entity, :origin_id, :choices=>@current_company.meeting_locations.find(:all, :conditions=>{:active=>true}).collect{|x| [x.name, x.id]}, :options=>{:include_blank=>tc('no_origin')}
+  -f.field :entity, :origin_id, :choices=>@current_company.meeting_locations.find(:all, :conditions=>{:active=>true}).collect{|x| [x.name, x.id]}, :options=>{:include_blank=>tc(:no_origin)}
   -f.field :entity, :first_met_on
   - #f.field :name ,{:datatype=>:choice, :id=>"meeting_#{meeting.position}_meeting_id", :name=>"entity_meeting[#{entity_meeting.position}][meeting_id]", :value=>entity_meeting.meeting_id, :choices=>@current_company.meetings.find(:all, :conditions=>{:active=>true}).collect{|x| [x.name, x.id]}, :options=>{:include_blank=>"--Aucun--"} }
   -f.field :entity, :proposer_id, :choices=>@current_company.entities.find(:all, :conditions=>["id != ?", (@entity.new_record? ? 0 : @entity)], :order=>:name).collect{|x| [x.full_name, x.id]}, :options=>{:include_blank=>tc('no_proposer')}
@@ -39,7 +42,7 @@
 
 =formalize(:id=>:supplier_form) do |f|
   -f.title :supplier
-  -f.field :entity, :supplier_account_id, :choices=>@supplier_accounts.collect{|x| [x.label, x.id]}, :new=>{:controller=>:accountancy, :action=>:accounts_create}, :options=>{:include_blank=>"--Créer automatiquement un compte fournisseur--"} 
+  -f.field :entity, :supplier_account_id, :choices=>@supplier_accounts.collect{|x| [x.label, x.id]}, :new=>{:controller=>:accountancy, :action=>:accounts_create}, :options=>{:include_blank=>tc(:account_supplier_to_create)} 
 
 
 :javascript
