git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1004 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/_events_form.html.haml
+++ b/app/views/relations/_events_form.html.haml
@@ -7,3 +7,5 @@
   - f.field  t("activerecord.attributes.event.location"), text_field_with_auto_complete(:event, :location)
   - f.field :event, :reason, :field=>:textarea
   - f.field :event, :started_at
+
+=observe_field("event_nature_id",  :url=>{:action=>:change_minutes}, :frequency=>0.25, :with=>"event_nature_id")
