--- a/public/stylesheets/dyta.css
+++ b/public/stylesheets/dyta.css
@@ -47,7 +47,7 @@ table.dyta tr.details td.comment { padding: 10px; font-size:15px; }
 .balance { text-align:center;margin-left:600px; margin-right:700px; margin-top:20px; padding:20px;border: 1px solid #BACFE6;}
 .total { text-align: right; }
 .total table { border-collapse: collapse; width: 100%; }
-.total table.dyta td { font-weight: bold; border: 1px solid #BACFE6; padding: 4px 8px; font-size: 17px; }
+.total table.dyta td { font-weight: bold; border: 1px solid #BACFE6; padding: 4px 8px; font-size: 17px; background:#FFF0E0;}
 .total table.dyta tr.important td { font-weight: bold; padding: 4px 8px; font-size: 20px !important; }
 
 table.dyta tr.balanced.even td{background:#CCF5CC;}
