--- a/public/stylesheets/dyta.css
+++ b/public/stylesheets/dyta.css
@@ -89,3 +89,7 @@ table.dyta tr.even.minimum td{background:#ffcc81; }
 table.dyta tr.odd.minimum td{background:#ffd495; }
 table.dyta tr.odd.enough td{background:#beff8e; }
 table.dyta tr.even.enough td{background:#c8ffa0; }
+
+
+.total table.dyta tr.separated * { border-top: 1px solid red !important;}
+.total table.dyta  th  { text-align:right; }
