--- a/app/views/management/sales.html.haml
+++ b/app/views/management/sales.html.haml
@@ -1,2 +1,11 @@
+.count=tc(:nb_sales, :count=>@current_company.sale_orders.size)
+- form_tag do
+  .search
+    .center
+      =tc('search_sales')
+      - [:all, :current, :unpaid].each do |state|
+        =radio_button(:sale_order, :state , state, :checked=>( state.to_s == session[:sale_order_state] ? true : false))+"&nbsp;"+content_tag(:label, tc(state), :for=>'sale_order_'+state.to_s)
+      =submit_tag tg('search_go', :action=>:sales)
+
 =dyta :sale_orders
 
